# hashsum_service

./: .gitignore  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/apps/: routes.py
backend/app/apps/file_hash/: api.py  dtos.py  helpers.py  models.py  tasks.py
backend/app/core/: celery.py  config.py  db.py  init_app.py
backend/docker/: Dockerfile  gunicorn.conf.py  start.sh
etc/nginx/: app.conf
frontend/: package-lock.json  package.json  webpack.config.js
frontend/docker/: Dockerfile
frontend/docker/etc/: nginx.conf
frontend/src/: App.vue
tests/: conftest.py  test_main.py
