[tool.poetry]
name = "test-task-bostongen"
version = "0.1.0"
description = ""
authors = ["gleb <g.m.korelsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
SQLAlchemy = "^1.4.25"
sqlmodel = "^0.0.4"
celery = "^5.1.2"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.1"
python-multipart = "^0.0.5"
environs = "^9.3.4"
redis = "^3.5.3"
orjson = "^3.6.4"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
